data/derived/comb/progs/unify/prog8327.ml.out
Characters 49-53:
  let rec wwhile (f,b) = let temp = f b in wwhile (temp, b);;
                                                   ^^^^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
